--- a/app.css
+++ b/app.css
@@ -1,6 +1,6 @@
 body {
     background-color: #f5d9d5;
-    font-family: "Nunito", sans-serif;
+    font-family: "Comic Sans", sans-serif;
     text-transform: uppercase;
 }
 
